# food_lounge

./: .env  .gitignore  ARCHITECTURE.md  HACKATHON_STATUS.md  PATIENT_NOTIFICATIONS_GUIDE.md  PRESENTATION.html  PRESENTATION_SLIDES.md  backup.html  docker-compose.yml  index.html  test_record_dose.sh  test_voice_query.sh
ai/: .env  .gitignore  CROSS_CHECK.md  DRUG_DATASET_INTEGRATION.md  Dockerfile  ENGLISH_SUPPORT.md  HF_TOKEN_SETUP.md  HYBRID_STT_APPROACH.md  INDIC_CONFORMER_SETUP.md  LANGUAGE_MISMATCH_WARNING.md  MIGRATION_TO_INDIC_CONFORMER.md  README.md  SETUP_COMPLETE.md  UPDATE_HF_TOKEN.md  __init__.py  main.py  pyproject.toml  requirements.txt  run.sh
ai/data/: drug_data.json
ai/models/: schemas.py
ai/prompts/: README.md  __init__.py  base_prompt.py  prompt_loader.py  risk_analysis.txt  risk_analysis_prompt.py
ai/services/: bge_service.py  drug_service.py  medgemma_service.py  stt_service.py  translation_service.py  tts_service.py
backend/: .env  .gitignore  API_USAGE_GUIDE.md  Dockerfile  ENDPOINTS_SYNC_CHECK.md  ENDPOINT_VERIFICATION.md  README.md  package-lock.json  package.json  project_plan.md  tsconfig.json
backend/src/: app.controller.ts  app.module.ts  main.ts
backend/src/ai/: ai.module.ts  ai.service.ts
backend/src/alerts/: alerts.controller.ts  alerts.module.ts  alerts.service.ts
backend/src/data/: create-patient-payload-examples.json  example-patient-request.json  patient-medication-schema.json  patients-sample.json
backend/src/doctor/: doctor.controller.ts  doctor.module.ts  (+1 more)
frontend/: .cta.json
frontend/src/: main.tsx
frontend_new/: .gitignore  package-lock.json  package.json
frontend_new/src/: main.tsx  routeTree.gen.ts
(+48 files in other folders)
